--- a/src/com/chatroom/resources/fxml/chatroom.fxml
+++ b/src/com/chatroom/resources/fxml/chatroom.fxml
@@ -34,23 +34,28 @@
          <right>
             <AnchorPane prefHeight="495.0" prefWidth="207.0" style="-fx-background-color: cyan;" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="70.0" layoutY="14.0" text="Online Users" />
-                  <TextArea layoutX="15.0" layoutY="55.0" prefHeight="419.0" prefWidth="178.0" />
+                  <Label layoutX="64.0" layoutY="14.0" text="Online Users">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
+                  <TextArea fx:id="onlineUserArea" editable="false" layoutX="15.0" layoutY="55.0" prefHeight="419.0" prefWidth="178.0" />
                </children>
             </AnchorPane>
          </right>
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: yellow;" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="58.0" fitWidth="58.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="78.0" layoutY="35.0" text="Username">
+                  <Label layoutX="33.0" layoutY="14.0" text="Username:">
                      <font>
-                        <Font size="15.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <JFXTextField layoutX="33.0" layoutY="445.0" prefHeight="25.0" prefWidth="360.0" style="-fx-background-color: grey;" />
-                  <JFXButton layoutX="421.0" layoutY="445.0" prefHeight="25.0" prefWidth="68.0" style="-fx-background-color: grey;" />
-                  <TextArea layoutX="33.0" layoutY="84.0" prefHeight="324.0" prefWidth="456.0" />
+                  <JFXButton fx:id="sendButton" layoutX="421.0" layoutY="417.0" prefHeight="61.0" prefWidth="68.0" style="-fx-background-color: grey;" text="Send" />
+                  <TextArea fx:id="chatTextArea" editable="false" layoutX="33.0" layoutY="55.0" prefHeight="344.0" prefWidth="456.0" wrapText="true" />
+                  <JFXTextField fx:id="usernameField" layoutX="114.0" layoutY="10.0" prefHeight="25.0" prefWidth="202.0" />
+                  <JFXButton fx:id="disconnectButton" layoutX="418.0" layoutY="11.0" prefHeight="25.0" prefWidth="76.0" style="-fx-background-color: grey;" text="Disconnect" />
+                  <JFXButton layoutX="332.0" layoutY="11.0" onAction="#connectButton" prefHeight="25.0" prefWidth="76.0" style="-fx-background-color: grey;" text="Connect" />
+                  <TextArea fx:id="inputTextArea" layoutX="33.0" layoutY="416.0" prefHeight="62.0" prefWidth="364.0" />
                </children>
             </AnchorPane>
          </center>
